--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 axum = "0.8.4"
+tower-http = { version = "0.6.2", features = ["cors", "fs"] }
 rmcp = { version = "0.3.2", features = ["server", "transport-worker", "transport-streamable-http-server"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
