--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,21 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.2",
+    "@quasar/extras": "^1.17.0",
     "pinia": "^3.0.3",
+    "quasar": "^2.18.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.10.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
+    "sass-embedded": "^1.90.0",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
