--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "1.0.142"
 tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
+pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
 
 [build-dependencies]
 cmake = "0.1.54"
