--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.2",
     "@quasar/extras": "^1.17.0",
+    "axios": "^1.11.0",
     "pinia": "^3.0.3",
     "quasar": "^2.18.2",
     "vue": "^3.5.18",
