--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,7 @@ pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
 futures = "0.3.31"
 chrono = "0.4.41"
 tokio-util = { version = "0.7.16", features = ["io"] }
+socketioxide = { version = "0.16.3", features = ["extensions", "state"] }
 
 [build-dependencies]
 cmake = "0.1.54"
