--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,6 +21,9 @@ tokio-util = { version = "0.7.16", features = ["io", "rt"] }
 socketioxide = { version = "0.16.3", features = ["extensions", "state"] }
 symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
 rodio = "0.21.1"
+spidev = "0.7.0"
+thiserror = "2.0.16"
+cpal = "0.16.0"
 
 [build-dependencies]
 cmake = "0.1.54"
