Revise to use view model (#1)

--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.2",
     "@quasar/extras": "^1.17.0",
+    "axios": "^1.11.0",
     "pinia": "^3.0.3",
     "quasar": "^2.18.2",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
