--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["multipart"] }
 tower-http = { version = "0.6.2", features = ["cors", "fs"] }
 rmcp = { version = "0.3.2", features = ["server", "transport-worker", "transport-streamable-http-server"] }
 serde = { version = "1.0.219", features = ["derive"] }
@@ -13,6 +13,17 @@ serde_json = "1.0.142"
 tokio = { version = "1.47.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
+pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
+futures = "0.3.31"
+chrono = "0.4.41"
+tokio-util = { version = "0.7.16", features = ["io", "rt"] }
+socketioxide = { version = "0.16.3", features = ["extensions", "state"] }
+symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
+rodio = "0.21.1"
+spidev = "0.7.0"
+thiserror = "2.0.16"
+cpal = "0.16.0"
 
 [build-dependencies]
 cmake = "0.1.54"
